# netmuxd

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  harvest.sh  librusb.rlib  recipe.json  vendor-manifest.toml
.github/events/: tag-push.json
.github/workflows/: build.yaml  ci.yaml  release.yaml
package/ubuntu/: netmuxd.service  postinst  postrm  prerm
src/: add_device.rs  central_data.rs  config.rs  devices.rs  handle.rs  heartbeat.rs  lib.rs  main.rs  manager.rs  mdns.rs  pairing_file.rs  passthrough.rs  raw_packet.rs  response_builder.rs  test.rs  upstream.rs  usb.rs  usb_mux.rs
src/apple_mux/: amds.rs  device.rs  ffi.rs  io.rs  mod.rs
src/daemon/: apple_mux_backend.rs  libusbk_backend.rs  mod.rs  nusb_backend.rs
src/libusbk/: device.rs  ffi.rs  io.rs  mod.rs
src/libwdi/: ffi.rs  mod.rs
src/usb/: apple.rs  bulk_io.rs  libusbk_backend.rs  mod.rs  mux.rs  nusb_backend.rs  provider.rs
wasm-test/: Cargo.toml  index.html
wasm-test/.cargo/: config.toml
wasm-test/src/: main.rs
