[package]
name = "netmuxd"
version = "0.4.2"
edition = "2024"
license = "LGPL-2.1-only"
description = "A daemon for muxing iOS device interfaces"
authors = ["Jackson Coxson"]
documentation = "https://docs.rs/netmuxd"
repository = "https://github.com/jkcoxson/netmuxd"
readme = "README.md"
keywords = ["lockdownd", "ios", "usbmuxd", "iphone"]
categories = [
  "command-line-utilities",
  "hardware-support",
  "network-programming",
]

# `wasm-test` is a separate trunk app with its own [workspace], not part of
# the published crate. Everything else here is build/CI metadata that has no
# business in a downstream consumer's source tree.
exclude = [
  "wasm-test",
  "Dockerfile",
  ".dockerignore",
  ".github",
  "vendor-bundles",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "netmuxd"

[dependencies]
# Wasm-safe subset always on; native pulls the rest via target deps below.
tokio = { version = "1", default-features = false, features = [
  "sync",
  "macros",
  "io-util",
] }
futures-util = { version = "0.3.21" }

nusb = { git = "https://github.com/jkcoxson/nusb", default-features = false, branch = "fix/webusb-drop" }

plist = "1.8"
plist-macro = "0.1.6"

log = { version = "0.4.16" }
thiserror = "2"

# Native-only deps: anything that touches sockets/fs/threads, mdns, or
# tokio's net runtime. The wasm library doesn't include the manager,
# daemon, or mdns code so these aren't needed there.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
nusb = { git = "https://github.com/jkcoxson/nusb", default-features = false, features = [
  "tokio",
], branch = "fix/webusb-drop" }
crossfire = { version = "2.1", features = ["tokio"] }
mdns-sd = "0.19"
# Local path until the idevice release carrying `usbmuxd::server` and the
# `mdns` matcher lands; switch back to a published version before publishing.
idevice = { version = "0.1.64", default-features = false, features = [
  "aws-lc",
  "usbmuxd",
  "heartbeat",
  "pair",
  "mdns",
] }
env_logger = "0.11"
colored = "3.0.0"
uuid = { version = "1.11", features = ["v4"] }

# wasm32-unknown-unknown: pull the JS executor for `crate::spawn` and
# the wasm-friendly idevice TLS backend.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4", optional = true }
# Timer future for `crate::sleep` on wasm (tokio's `time` isn't available here).
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
idevice = { version = "0.1.64", default-features = false, features = [
  "heartbeat",
  "pair",
  "wasm",
] }
# Forward `js`/`wasm_js` to transitive `getrandom` (uuid v4 needs it).
getrandom_02 = { package = "getrandom", version = "0.2", default-features = false, features = [
  "js",
], optional = true }
getrandom_04 = { package = "getrandom", version = "0.4", default-features = false, features = [
  "wasm_js",
], optional = true }

[features]
default = ["libusbk"]
# Windows: the legacy libusbK backend + libwdi driver installer (`install` /
# `export-driver`). Pulls the vendor bundles in build.rs. Disable with
# `--no-default-features` for an Apple-driver-only build that needs no vendor
# bundles.
libusbk = []
# Enables wasm32-unknown-unknown support for the library surface
# (`usb_mux`, `devices`, plus the `crate::spawn` shim).
# Consumers must bring their own transport: enumerate via nusb directly
# and feed the bulk endpoints to `usb_mux::spawn`. The daemon, mdns,
# pairing-file finder, and manager are not available on this target.
wasm = [
  "dep:wasm-bindgen-futures",
  "dep:gloo-timers",
  "dep:getrandom_02",
  "dep:getrandom_04",
]

# [patch."https://github.com/jkcoxson/nusb"]
# nusb = { path = "/Users/jacksoncoxson/code/nusb" }
