[package]
name = "netmuxd-wasm-test"
version = "0.1.0"
edition = "2024"
publish = false

# Standalone trunk app — not part of any workspace.
[workspace]

[dependencies]
netmuxd = { path = "..", default-features = false, features = ["wasm"] }
idevice = { version = "0.1.59", default-features = false, features = ["heartbeat", "pair", "wasm"] }
nusb = { git = "https://github.com/jkcoxson/nusb", branch = "webusb", default-features = false }
plist = "1.8"
uuid = { version = "1", features = ["v4", "js"] }

tokio = { version = "1", default-features = false, features = ["sync", "macros", "io-util"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "HtmlInputElement",
    "Navigator",
    "Usb",
    "UsbDeviceFilter",
    "UsbDeviceRequestOptions",
    "Storage",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "File",
    "FileList",
    "FileReader",
    "Event",
    "EventTarget",
    "console",
]
